[package]
name = "mic-volume-overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
]
